--- a/{{cookiecutter.repo_name}}/MANIFEST.in
+++ b/{{cookiecutter.repo_name}}/MANIFEST.in
@@ -2,5 +2,8 @@ include AUTHORS.rst
 include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
-include README.rst
+include README.md
 recursive-include {{cookiecutter.app_name}} *.html *.png *.gif *js *.css *jpg *jpeg *svg *py
+recursive-include {{cookiecutter.app_name}}/static *
+recursive-include {{cookiecutter.app_name}}/templates *
+global-exclude *.orig *.pyc *.log *.swp
